虾皮二面笔试

--- a/01_笔试/虾皮_07_add函数多参数实现.html
+++ b/01_笔试/虾皮_07_add函数多参数实现.html
@@ -45,6 +45,7 @@
         return sum;
       }
       sum.toString = function () { // 重写toString()方法
+        return res
       }
       return sum; // 返回一个函数    return res;
 
